@@ -1,5 +1,27 @@
 require 'spec_helper.rb'
 
 describe Daru::DataFrame do
+  before(:each) do
+    @df = Daru::DataFrame.new({a: [1,2,3,4,5,6], b: ['a','e','i','o','u'], 
+      c: [10,20,30,40,50] })
+  end
 
+  context "#+" do
+
+  end
+
+  context "#-" do
+  end
+
+  context "#*" do
+  end
+
+  context "#/" do
+  end
+
+  context "#%" do
+  end
+
+  context "#**" do
+  end
 end
