@@ -56,3 +56,4 @@
 * Vectors keep a record of all positions with nils with #nil\_positions.
 * Know whether a position has nils or not with #is_nil?
 * Added #clone_structure to Vector for cloning only the index and structure or a vector.
+* Figure out the type of data using #type. Running thru the data to determine its type is delayed till the last possible moment.
